@@ -1,3 +1,12 @@
+2010-04-22  Stas Boukarev  <stassats@gmail.com>
+
+	* swank-backend.lisp (with-symbol): Test for package before doing
+	find-symbol.
+	* swank-sbcl.lisp(Multiprocessing): use with-symbol.
+	(emacs-inspect t): Remove newlines from text returned by
+	sb-impl::inspected-parts, otherwise there will be ".." inserted by
+	the printer due to (*print-lines* 1).
+
 2010-04-21  Stas Boukarev  <stassats@gmail.com>
 
 	* slime.el (slime-open-inspector): Use forward-line instead of
